# binsim_analyzer

./: .gitignore  README.md  TODO.md  check.sh  config.yaml  mypy.ini  pyproject.toml  test_config.yaml  verify_byte_extraction.py
src/: bindiff_types.py  main.py  similarity.py
src/tasks/: __init__.py  analyze.py  build.py  download.py  extract.py  map.py  tasks_common.py
